--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,31 +3,59 @@
     --secondary-color:  #008080;
 }
 
+form {
+    display: flex;
+    flex-direction: row;
+}
+input {
+    border-radius: 25px;
+    border: 4px;
+    padding: 15px;
+    width: 200px;
+    height: 50px;
+}
+
+
+button {
+    display: flex;
+    background: transparent;
+    border: none;
+    outline: none;
+
+}
+
+.magnifine{
+    object-fit: cover;
+}
+section h2 {
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+}
 
 .flex {
     display: flex;
+    border: solid 2px #008080;
+    flex-basis: content;
+    padding: 5px;
 }  
 
 .flex2 div {
     flex-wrap: wrap;
 }  
+.flex2 div h3 {
+    font-weight: bold;
+}
+
 
 header {
     background-color: var(--primary-color);
 }
 
 .material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;  /* Preferred icon size */
-    display: inline-block;
-    line-height: 1;
-    text-transform: none;
-    letter-spacing: normal;
-    word-wrap: normal;
-    white-space: nowrap;
-    direction: ltr;
+    align-self: center;
+    padding-left: 5px;
+    font-size: 35px !important;
   
     /* Support for all WebKit browsers. */
     -webkit-font-smoothing: antialiased;
