--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,9 +24,6 @@ button {
 
 }
 
-.magnifine{
-    object-fit: cover;
-}
 section h2 {
     font-weight: bold;
     font-size: 20px;
@@ -37,13 +34,16 @@ section h2 {
     display: flex;
     border: solid 2px #008080;
     flex-basis: content;
-    padding: 5px;
 }  
 
-.flex2 div {
+.flex2 {
     flex-wrap: wrap;
+    margin-left: 10px;
+    padding-left: 20px;
+    border-left: solid 2px #008080;
+    
 }  
-.flex2 div h3 {
+.flex2 h3 {
     font-weight: bold;
 }
 
@@ -54,7 +54,7 @@ header {
 
 .material-icons {
     align-self: center;
-    padding-left: 5px;
+    margin: right;
     font-size: 35px !important;
   
     /* Support for all WebKit browsers. */
