--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 :root{
     --primary-color:#ffcf40;
-    --secondary-color:  #008080;
+    --secondary-color:  #999999;
 }
 
 form {
@@ -32,17 +32,16 @@ section h2 {
 
 .flex {
     display: flex;
-    border: solid 2px #008080;
+    border: solid 2px;
     flex-basis: content;
 }  
 
 .flex2 {
     flex-wrap: wrap;
     margin-left: 10px;
-    padding-left: 20px;
-    border-left: solid 2px #008080;
-    
+    padding-left: 20px; 
 }  
+
 .flex2 h3 {
     font-weight: bold;
 }
