--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,10 +3,11 @@
     --secondary-color:  #999999;
 }
 
-form {
+.search {
     display: flex;
-    flex-direction: row;
+    justify-items: auto;
 }
+
 input {
     border-radius: 25px;
     border: 4px;
@@ -21,6 +22,7 @@ button {
     background: transparent;
     border: none;
     outline: none;
+    float: right;
 
 }
 
@@ -42,13 +44,19 @@ section h2 {
     padding-left: 20px; 
 }  
 
+.card-header {
+    justify-items: center;
+}
+
 .flex2 h3 {
     font-weight: bold;
 }
 
 .card-content {
     align-items: center;
-word-break: break-all;
+    word-break: break-all;
+    text-align: center;
+  
 }
 
 header {
