--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,12 @@
     justify-items: auto;
 }
 
+.search div {
+    background-color: white;
+    border-radius:30px;
+    box-shadow: 0px 3px 6px #00000029;;
+}
+
 input {
     border-radius: 25px;
     border: 4px;
@@ -63,10 +69,19 @@ header {
     background-color: var(--primary-color);
 }
 
+header h2 {
+    text-align: left;
+    word-break:break-all;
+    width: 70%;
+    
+}
+
 .material-icons {
     align-self: center;
-    margin: right;
-    font-size: 35px !important;
+    margin: left;
+    font-size: 30px !important;
+    margin: 10px 10px 0px 0px;
+
   
     /* Support for all WebKit browsers. */
     -webkit-font-smoothing: antialiased;
