--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,33 +1,90 @@
 :root{
     --primary-color:#ffcf40;
-    --secondary-color:  #008080;
+    --secondary-color:  #999999;
+}
+
+.search {
+    display: flex;
+    justify-items: auto;
+}
+
+.search div {
+    background-color: white;
+    border-radius:30px;
+    box-shadow: 0px 3px 6px #00000029;;
+}
+
+input {
+    border-radius: 25px;
+    border: 4px;
+    padding: 15px;
+    width: 200px;
+    height: 50px;
 }
 
 
+button {
+    display: flex;
+    background: transparent;
+    border: none;
+    outline: none;
+    float: right;
+
+}
+
+section h2 {
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+}
+
 .flex {
     display: flex;
+    border: solid 2px;
+    flex-basis: content;
 }  
 
-.flex2 div {
+.flex2 {
     flex-wrap: wrap;
+    margin-left: 10px;
+    padding-left: 20px; 
 }  
+
+.card-header {
+    justify-items: center;
+}
+
+.flex2 h3 {
+    font-weight: bold;
+}
+
+.card-content {
+    display: flex;
+    justify-content: left;
+    align-content: left;
+    word-break: break-all;
+    text-align: left;
+    margin-left: 50px;
+    line-height: normal;
+}
 
 header {
     background-color: var(--primary-color);
 }
 
+header h2 {
+    text-align: left;
+    word-break:break-all;
+    width: 70%;
+    
+}
+
 .material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;  /* Preferred icon size */
-    display: inline-block;
-    line-height: 1;
-    text-transform: none;
-    letter-spacing: normal;
-    word-wrap: normal;
-    white-space: nowrap;
-    direction: ltr;
+    align-self: center;
+    margin: left;
+    font-size: 30px !important;
+    margin: 10px 10px 0px 0px;
+
   
     /* Support for all WebKit browsers. */
     -webkit-font-smoothing: antialiased;
@@ -40,4 +97,3 @@ header {
     /* Support for IE. */
     font-feature-settings: 'liga';
   }
-
